# margo

./: CHANGELOG.md  Cargo.toml  README.md
docs/: PLANNING-REPL-ENHANCEMENTS.md
examples/: nzavs-church-wellbeing.md
src/: config.rs  main.rs  theme.rs
src/commands/: init.rs  utils.rs
src/data/: mod.rs  variables.rs
src/repl/: commands.rs  completer.rs  fuzzy.rs  highlighter.rs  hinter.rs  mod.rs  pathpicker.rs  picker.rs  prompt.rs  welcome.rs
src/templates/: grf.rs  grf_event.rs  mod.rs
src/tui/: mod.rs  theme.rs  widgets.rs
storage/tui/: app.rs
tests/: integration_test.rs
