[package]
name = "margo"
version = "0.3.1"
edition = "2024"
authors = ["Joseph Bulbulia"]
description = "CLI tool for scaffolding margot causal inference projects"
license = "MIT"
repository = "https://github.com/go-bayes/margo"
keywords = ["causal-inference", "r", "scaffold", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "margo"
path = "src/main.rs"

[dependencies]
# cli argument parsing
clap = { version = "4", features = ["derive"] }

# error handling
anyhow = "1"

# REPL line editor with vi mode
reedline = "0.38"

# terminal colours (catppuccin mocha)
nu-ansi-term = "0.50"

# terminal control
crossterm = "0.28"

# fuzzy matching
nucleo = "0.5"
nucleo-matcher = "0.3"

# interactive prompts/pickers
inquire = "0.7"

# config paths
dirs = "6"

[dev-dependencies]
tempfile = "3"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
